# Studenten

./: .depcheckrc.yml  .editorconfig  .env.STUDENT  .gitignore  .npmrc  Dockerfile  Dockerfile.alpine  Jenkinsfile  ReadMe.keycloak.md  ReadMe.nest.md  docker-bake.hcl  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.extras/compose/backend/: compose.yml
.extras/compose/buch/: app.yml  compose.yml
.extras/compose/debug/: compose.busybox.yml  compose.yml
.extras/compose/fakesmtp/: .env  compose.yml
.extras/compose/jenkins/: compose.yml
.extras/compose/keycloak/: .env  compose.yml
.extras/compose/postgres/: compose.yml
.extras/compose/sonarqube/: .env  compose.yml
.extras/db/postgres/csv/: foto.csv  name.csv  student.csv
.extras/db/postgres/sql/: create-db-student.sql  create-schema-student.sql
.extras/doc/folien/: folien.adoc
.extras/doc/projekthandbuch/: ER-Diagramm.plantuml  Student.plantuml  StudentGetController.plantuml  StudentMutationResolver.plantuml  StudentQueryResolver.plantuml  StudentReadService.plantuml  StudentWriteController.plantuml  StudentWriteService.plantuml  komponenten.plantuml  projekthandbuch.adoc  sequenzdiagramm.plantuml  use-cases.plantuml
.extras/jenkins/: Dockerfile  docker-bake.hcl
.extras/lasttest-locust/: LICENSE  README.md  locustfile.py  pyproject.toml
scripts/: asciidoctor.mts  copy-resources.mts  dependency-check.mts  generate-load.mts  sonar-scanner.mts  suppression.xml
src/: app.module.ts  main.ts
src/Studenten/: student.module.ts
src/Studenten/controller/: createBaseUri.ts  fotoDTO.entity.ts  nameDTO.entity.ts  page.ts  student-get.controller.ts  student-write.controller.ts  studentDTO.entity.ts
src/Studenten/entity/: decimal-transformer.ts  entities.ts  foto.entity.ts  name.entity.ts  studentFile.entity.ts  studenten.entity.ts
src/Studenten/logger/: banner.service.ts  logger.module.ts  logger.ts  request-logger.middleware.ts  response-time.interceptor.ts
src/Studenten/resolver/: errors.ts  http-exception.filter.ts  student-mutation.resolver.ts  student-query.resolver.ts
src/Studenten/service/: exceptions.ts  pageable.ts  query-builder.ts  slice.ts  student-read.service.ts  student-write.service.ts  suchkriterien.ts
src/admin/: admin.module.ts  health.controller.ts  prometheus.controller.ts
src/config/: app.ts  cors.ts  db.ts  env.ts  graphql.ts  health.ts  https.ts  keycloak.ts  logger.ts  mail.ts  node.ts  paths.ts  typeormNamingStrategy.ts  typeormOptions.ts
src/config/dev/: db-populate.service.ts  dev.controller.ts  dev.module.ts
src/config/resources/: app.yml
src/config/resources/graphql/: schema.graphql
src/config/resources/postgres/: create.sql  drop.sql
src/config/resources/tls/: certificate.crt
src/logger/: banner.service.ts  logger.ts
src/mail/: mail.module.ts  mail.service.ts
src/security/keycloak/: keycloak.module.ts  keycloak.service.ts  token.controller.ts  token.resolver.ts
test/: constants.mts  setup.global.mts  simple.test.mts
test/graphql/: buch-mutation.resolver.test.mts  buch-query.resolver.test.mts  graphql.mts  student-mutation.resolver.test.mts  student-query.resolver.test.mts
test/rest/: buch-DELETE.controller.test.mts  buch-GET-id.controller.test.mts  buch-GET.controller.test.mts  buch-POST.controller.test.mts  buch-PUT.controller.test.mts  error-response.mts  student-DELETE.controller.test.mts  student-GET-id.controller.test.mts  student-GET.controller.test.mts  student-POST.controller.test.mts  student-PUT.controller.test.mts
